<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmachApp</string>
    <string name="new_fsm">Neu</string>
    <string name="load_fsm">Laden</string>
    <string name="title_activity_state_machine_editor">StateMachineEditor</string>
    <string name="edit_states">Zustände</string>
    <string name="edit_transitions">Übergänge</string>
    <string name="reset_view">Ansicht Zentrieren</string>
    <string name="delete">Löschen</string>
    <string name="properties">Eigenschaften</string>
    <string name="cant_delete_initial_state">Der initiale Zustand kann nicht gelöscht werden.</string>
    <string name="must_end_at_state">Die Transition muss bei einem Zustand aufhören.</string>
    <string name="begin_must_not_be_end">Die Transition muss an einem anderen Zustand aufhören als sie anfängt.</string>
    <string name="title_activity_state_property">Zustandseigenschaften</string>
    <string name="state">Zustand: </string>
    <string name="colorButton">Farbe ändern</string>
    <string name="stateNameHint">Der Name des Zustands</string>
    <string name="colorDialogTitle">Wähle eine Farbe:</string>
    <string name="accept">Übernehmen</string>
    <string name="disrecard">Abbrechen</string>
    <string name="transmitButton">Automat Ausführen</string>
    <string name="enterMachineName">Wähle einen Namen:</string>
    <string name="next">Weiter</string>
    <string name="enterAddress">Addresse des Roboters:</string>
    <string name="newMachine">NeuerAutomat</string>
    <string name="connnectionFailure">Fehler beim Herstellen der Verbindung</string>
    <string name="make_state_initial">Zum Startzustand machen</string>
    <string name="title_activity_transition_property">Übergangseigenschaften</string>
    <string name="transition">Übergang:</string>
    <string name="transition_name_hint">Der Name des Übergangs</string>
    <string name="reset_transition">Zurücksetzen</string>
    <string name="send">Senden</string>
    <string name="unconnected_transition">Unverbundene Transitionen sind nicht erlaubt.</string>
    <string name="connecting">Verbindung wird hergestellt…</string>
    <string name="undo">Rückgängig</string>
    <string name="redo">Wiederherstellen</string>
    <string name="settings">Einstellungen</string>
    <string name="title_activity_machine_property">Automateneigenschaften</string>
    <string name="automat">Automat:</string>
    <string name="hint_automatName">Name des Automaten</string>
    <string name="preference_key_showTransitionNames">showTransitionNames</string>
    <string name="preference_title_showTransitionNames">Übergangsnamen Anzeigen</string>
    <string name="preference_summary_showTransitionNames">Zeigt die Namen der Übergänge an, wenn aktiviert.</string>
    <string name="failed_to_load">Beim Laden ist ein fehler Aufgetreten.</string>
    <string name="pick_a_file">Wähle einen Automaten</string>
    <string name="no_files_to_load">Es wurden keine Automaten gefunden.</string>
    <string name="file_already_exists">Automat exestiert bereits</string>
    <string name="file_already_exists_message">Ein Automat mit diesem Namen exestiert beretis. Wollen Sie ihn überschreiben?</string>
    <string name="delete_machine">Automaten Löschen</string>
    <string name="delete_machine_title">Automaten zum Löschen auswählen</string>
    <string name="title_activity_debug_activity">Debug</string>
    <string name="sensor_data">Sensorwerte</string>
    <string name="debug_automat">Automat</string>
    <string name="stop">Automat Anhalten</string>
    <string name="preference_title_clear_ip">Entferne letzte IP</string>
    <string name="preference_summary_clear_ip">Löscht die zuletzt benutzte IP</string>
    <string name="ip_deleted">IP gelöscht</string>
    <string name="nameAlreadyExists">Dieser Name ist bereits vergeben, er wird nicht übernommen.</string>
    <string name="connectionSuccess">Verbindung hergestellt.</string>
    <string name="transition_property_increase_priority">+</string>
    <string name="transition_property_decrease_value">-</string>
    <string name="transition_property_priority">Priorität:</string>
    <string name="working_dialog_text">Übertrage...</string>
    <string name="empty_name">Bitte geben Sie einen Namen ein.</string>
    <string name="enter_a_value">Geben Sie eine Nummer ein.</string>
    <string name="empty_name_in_property">Wenn Sie den Namen frei lassen, so wird er nicht geändert.</string>
    <string name="changes_saved">Änderungen wurden übernommen</string>
    <string name="undid_state_properties">Zustandseigenschaftenänderung rückgängig gemacht</string>
    <string name="redid_state_properties">Zustandseigenschaftenänderung wiederhergestellt</string>
    <string name="undid_transition_properties">Transitionseigenschaftenänderung rückgängig gemacht</string>
    <string name="redid_transition_properties">Transitionseigenschaftenänderung wiederhergestellt</string>
    <string name="max_priority_reached">Maximale Priorität erreicht</string>
    <string name="min_priority_reached">Minimale Priorität erreicht</string>

</resources>
